--- a/public/patterns/04-pages-03-hankesivu-edit-mode/04-pages-03-hankesivu-edit-mode.html
+++ b/public/patterns/04-pages-03-hankesivu-edit-mode/04-pages-03-hankesivu-edit-mode.html
@@ -10,7 +10,7 @@
 		<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 
-		<link rel="stylesheet" href="../../css/style.css?1401960007" media="all" />
+		<link rel="stylesheet" href="../../css/style.css?1401963838" media="all" />
 		<!--[if lt IE 10]>
 			<style type="text/css">
 				.og-share-post .share-content .image-container{ height: 100px; }
@@ -25,8 +25,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1401960007" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1401960007" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1401963838" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1401963838" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -324,7 +324,7 @@
       </div>-->
     <div id="hanke-date">
       <div class="helper-container">
-        <span class="icon-help" title="Example tip text." placement="top">Hankkeen aikataulu*</span>
+        <h3 class="icon-help" title="Example tip text." placement="top">Hankkeen aikataulu*</h3>
         <p class="helper-text small is-vishidden">Tässä aputeksti. Aputeksti auttaa suuresti käyttäjää.</p>
       </div>
       <div class="event-date-container">
@@ -348,97 +348,101 @@
         </div>
       </div>
     </div>
-    <div id="hanke-attachments">
-      <div id="hanke-add-attachment">
-        <form action="" class="attachment-form">
-          <div class="form-element attachment-container">
-            <label for="upload-file" class="upload-file-button">Lisää tiedosto</label>
-            <input type="file" id="upload-file" />
-          </div>
-        </form>
-      </div>
-      <!-- Hanke attachment list -->
-      <div id="hanke-attachment-list" class="fadeout">
-        <div class="attachment-form inline-element">
-          <div class="form-element attachment-edit">
-            <label class="edit-file-button">muokkaa</label>
-            <div class="mime-container">
-              <i class="fa fa-file-o"></i>
+    <!-- Optional field those will be fadeout -->
+    <div class="fadeout">
+      <div id="hanke-attachments">
+        <h3>Liitteet</h3>
+        <div id="hanke-add-attachment">
+          <form action="" class="attachment-form">
+            <div class="form-element attachment-container">
+              <label for="upload-file" class="upload-file-button">Lisää tiedosto</label>
+              <input type="file" id="upload-file" />
             </div>
-            <a class="file-title">Otsikko</a>
-            <p>tiedostonimi...jpg</p>
-          </div>
+          </form>
         </div>
-        <div class="attachment-form inline-element">
-          <div class="form-element attachment-edit">
-            <label class="edit-file-button">muokkaa</label>
-            <div class="mime-container">
-              <i class="fa fa-file-o"></i>
+        <!-- Hanke attachment list -->
+        <div id="hanke-attachment-list">
+          <div class="attachment-form inline-element">
+            <div class="form-element attachment-edit">
+              <label class="edit-file-button">muokkaa</label>
+              <div class="mime-container">
+                <i class="fa fa-file-o"></i>
+              </div>
+              <a class="file-title">Otsikko</a>
+              <p>tiedostonimi...jpg</p>
             </div>
-            <a class="file-title">Otsikko</a>
-            <p>tiedostonimi...jpg</p>
           </div>
-        </div>
-        <div class="attachment-form inline-element">
-          <div class="form-element attachment-edit">
-            <label class="edit-file-button">muokkaa</label>
-            <div class="mime-container">
-              <i class="fa fa-file-o"></i>
+          <div class="attachment-form inline-element">
+            <div class="form-element attachment-edit">
+              <label class="edit-file-button">muokkaa</label>
+              <div class="mime-container">
+                <i class="fa fa-file-o"></i>
+              </div>
+              <a class="file-title">Otsikko</a>
+              <p>tiedostonimi...jpg</p>
             </div>
-            <a class="file-title">Otsikko</a>
-            <p>tiedostonimi...jpg</p>
           </div>
-        </div>
-        <p class="read-more">
-          <a href="">Näytä liitetiedostot</a>
-        </p>
-      </div>
-    </div>
-    <div id="hanke-links">
-      <h3>Linkit</h3>
-      <div class="hanke-link-list">
-        <div class="hanke-link-item">
-          <div class="form-element text-el">
-            <textarea class="ta-small js-dynamic" placeholder="http://" maxlength="200">http://www.google.com</textarea>
-          </div>
-          <div class="form-element text-el">
-            <textarea class="ta-small js-dynamic" placeholder="Kuvaus" maxlength="100">Hakukone</textarea>
-          </div>
-        </div>
-        <div class="hanke-link-item cf">
-          <div class="form-element text-el">
-            <textarea class="ta-small js-dynamic" placeholder="http://" maxlength="200"></textarea>
-          </div>
-          <div class="form-element text-el">
-            <textarea class="ta-small js-dynamic" placeholder="Kuvaus" maxlength="100"></textarea>
-          </div>
-        </div>
-        <div class="hanke-link-item cf">
-          <div class="form-element text-el">
-            <textarea class="ta-small js-dynamic" placeholder="http://" maxlength="200"></textarea>
-          </div>
-          <div class="form-element text-el">
-            <textarea class="ta-small js-dynamic" placeholder="Kuvaus" maxlength="100"></textarea>
+          <div class="attachment-form inline-element">
+            <div class="form-element attachment-edit">
+              <label class="edit-file-button">muokkaa</label>
+              <div class="mime-container">
+                <i class="fa fa-file-o"></i>
+              </div>
+              <a class="file-title">Otsikko</a>
+              <p>tiedostonimi...jpg</p>
+            </div>
           </div>
         </div>
       </div>
-      <input class="btn btn-otk" type="submit" value="Lisää linkki" />
-    </div>
-    <div id="hanke-locations">
-      <h3>Paikkakunnat</h3>
-      <ul id="tbLocations" class="location-list"></ul>
-    </div>
-    <div id="hanke-keywords">
-      <h3>Asiasanat</h3>
-      <ul id="tbKeywords" class="tagit-list"></ul>
-    </div>
-    <div id="hanke-admins">
-      <h3>Vastuuhenkilöt</h3>
-      <ul id="tbAdmins" class="person-list"></ul>
-    </div>
-    <div id="hanke-supervisors">
-      <h3>Ohjaajat</h3>
-      <ul id="tbSupervisors" class="person-list"></ul>
+      <div id="hanke-links">
+        <h3>Linkit</h3>
+        <div class="hanke-link-list">
+          <div class="hanke-link-item">
+            <div class="form-element text-el">
+              <textarea class="ta-small js-dynamic" placeholder="http://" maxlength="200">http://www.google.com</textarea>
+            </div>
+            <div class="form-element text-el">
+              <textarea class="ta-small js-dynamic" placeholder="Kuvaus" maxlength="100">Hakukone</textarea>
+            </div>
+          </div>
+          <div class="hanke-link-item cf">
+            <div class="form-element text-el">
+              <textarea class="ta-small js-dynamic" placeholder="http://" maxlength="200"></textarea>
+            </div>
+            <div class="form-element text-el">
+              <textarea class="ta-small js-dynamic" placeholder="Kuvaus" maxlength="100"></textarea>
+            </div>
+          </div>
+          <div class="hanke-link-item cf">
+            <div class="form-element text-el">
+              <textarea class="ta-small js-dynamic" placeholder="http://" maxlength="200"></textarea>
+            </div>
+            <div class="form-element text-el">
+              <textarea class="ta-small js-dynamic" placeholder="Kuvaus" maxlength="100"></textarea>
+            </div>
+          </div>
+        </div>
+        <input class="btn btn-otk" type="submit" value="Lisää linkki" />
+      </div>
+      <div id="hanke-locations">
+        <h3>Paikkakunnat</h3>
+        <ul id="tbLocations" class="location-list"></ul>
+      </div>
+      <div id="hanke-keywords">
+        <h3>Asiasanat</h3>
+        <ul id="tbKeywords" class="tagit-list"></ul>
+      </div>
+      <div id="hanke-admins">
+        <h3>Vastuuhenkilöt</h3>
+        <ul id="tbAdmins" class="person-list"></ul>
+      </div>
+      <div id="hanke-supervisors">
+        <h3>Ohjaajat</h3>
+        <ul id="tbSupervisors" class="person-list"></ul>
+      </div>
+      <p class="read-more">
+        <a href="#">Näytä valinnaiset lisätiedot</a>
+      </p>
     </div>
     <div id="hanke-save">
       <input type="checkbox">
@@ -695,10 +699,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1401960007">
+	<script id="pl-js-polyfill-insert-1401963838">
 		(function() {
 			if (self != top) {
-				var cb = '1401960007';
+				var cb = '1401963838';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -707,10 +711,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1401960007">
+	<script id="pl-js-insert-1401963838">
 		(function() {
 			if (self != top) {
-				var cb = '1401960007';
+				var cb = '1401963838';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
