--- a/public/patterns/04-pages-06-content-landingpage/04-pages-06-content-landingpage.html
+++ b/public/patterns/04-pages-06-content-landingpage/04-pages-06-content-landingpage.html
@@ -10,7 +10,7 @@
 		<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 
-		<link rel="stylesheet" href="../../css/style.css?1401960007" media="all" />
+		<link rel="stylesheet" href="../../css/style.css?1401963838" media="all" />
 		<!--[if lt IE 10]>
 			<style type="text/css">
 				.og-share-post .share-content .image-container{ height: 100px; }
@@ -25,8 +25,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1401960007" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1401960007" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1401963838" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1401963838" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -253,85 +253,91 @@
       <p>So, setting about it as methodically as men might smoke out a wasps' nest, the Martians spread this strange stifling vapour over the Londonward country. The horns of the crescent slowly moved apart, until at last they formed a line from Hanwell to Coombe and Malden. All night through their destructive tubes advanced.</p>
     </div>
     <div class="cf">
-      <div class="content-item large  float-left">
-        <div class="lift-header gradient-cyan">
-          Poliittinen osallistuminen
-        </div>
-        <div class="lift-content">
-          <div class="lift-image">
-            <a href="#" />
+      <div>
+        <div class="content-item medium  float-left">
+          <div class="lift-header gradient-cyan">
+            Poliittinen osallistuminen
           </div>
-          <div class="lift-text">
-            Lorem ipsum nostoteksti
-          </div>
-          <div class="lift-link">
-            <a href="#">Lue lisää</a>
-          </div>
-        </div>
-      </div>
-      <div class="content-item large  float-right">
-        <div class="lift-header gradient-cyan">
-          Demokratian ongelmat ja haasteet
-        </div>
-        <div class="lift-content">
-          <div class="lift-image">
-            <a href="#" />
-          </div>
-          <div class="lift-text">
-            Lorem ipsum nostoteksti
-          </div>
-          <div class="lift-link">
-            <a href="#">Lue lisää</a>
+          <div class="lift-content">
+            <div class="lift-image">
+              <a href="#" />
+            </div>
+            <div class="lift-text">
+              Lorem ipsum nostoteksti
+            </div>
+            <div class="lift-link">
+              <a href="#">Lue lisää</a>
+            </div>
           </div>
         </div>
-      </div>
-      
-      <div class="content-item large  float-left">
-        <div class="lift-header gradient-cyan">
-          Demokratia
-        </div>
-        <div class="lift-content">
-          <div class="lift-image">
-            <a href="#" />
+        <div class="content-item medium  float-right">
+          <div class="lift-header gradient-cyan">
+            Demokratian ongelmat ja haasteet
           </div>
-          <div class="lift-text">
-            Lorem ipsum nostoteksti
-          </div>
-          <div class="lift-link">
-            <a href="#">Lue lisää</a>
-          </div>
-        </div>
-      </div>
-      <div class="content-item large  float-right">
-        <div class="lift-header gradient-cyan">
-          Edustuksellinen ja suora demokratia
-        </div>
-        <div class="lift-content">
-          <div class="lift-image">
-            <a href="#" />
-          </div>
-          <div class="lift-text">
-            Lorem ipsum nostoteksti
-          </div>
-          <div class="lift-link">
-            <a href="#">Lue lisää</a>
+          <div class="lift-content">
+            <div class="lift-image">
+              <a href="#" />
+            </div>
+            <div class="lift-text">
+              Lorem ipsum nostoteksti
+            </div>
+            <div class="lift-link">
+              <a href="#">Lue lisää</a>
+            </div>
           </div>
         </div>
       </div>
       
-      <div class="content-item large  float-left">
-        <div class="lift-header gradient-cyan">
-          Demokratiasanasto
+      <div>
+        <div class="content-item medium  float-left">
+          <div class="lift-header gradient-cyan">
+            Demokratia
+          </div>
+          <div class="lift-content">
+            <div class="lift-image">
+              <a href="#" />
+            </div>
+            <div class="lift-text">
+              Lorem ipsum nostoteksti
+            </div>
+            <div class="lift-link">
+              <a href="#">Lue lisää</a>
+            </div>
+          </div>
         </div>
-        <div class="lift-content">
-          <div class="lift-image">
-            <a href="#" />
+        <div class="content-item medium  float-right">
+          <div class="lift-header gradient-cyan">
+            Edustuksellinen ja suora demokratia
           </div>
-          <div class="lift-text">
-            Lorem ipsum nostoteksti
+          <div class="lift-content">
+            <div class="lift-image">
+              <a href="#" />
+            </div>
+            <div class="lift-text">
+              Lorem ipsum nostoteksti
+            </div>
+            <div class="lift-link">
+              <a href="#">Lue lisää</a>
+            </div>
           </div>
-          <div class="lift-link">
-            <a href="#">Lue lisää</a>
+        </div>
+      </div>
+
+      <div>
+        <div class="content-item medium  float-left">
+          <div class="lift-header gradient-cyan">
+            Demokratiasanasto
+          </div>
+          <div class="lift-content">
+            <div class="lift-image">
+              <a href="#" />
+            </div>
+            <div class="lift-text">
+              Lorem ipsum nostoteksti
+            </div>
+            <div class="lift-link">
+              <a href="#">Lue lisää</a>
+            </div>
           </div>
         </div>
       </div>
@@ -585,10 +591,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1401960007">
+	<script id="pl-js-polyfill-insert-1401963838">
 		(function() {
 			if (self != top) {
-				var cb = '1401960007';
+				var cb = '1401963838';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -597,10 +603,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1401960007">
+	<script id="pl-js-insert-1401963838">
 		(function() {
 			if (self != top) {
-				var cb = '1401960007';
+				var cb = '1401963838';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
